new changes in project-1

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://salehish:salehish25@cluster0.sx4zo.mongodb.net/project-1.salehish
+MONGODB_URL = mongodb+srv://salehish:salehish25@cluster0.sx4zo.mongodb.net/project-1
