--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-MONGODB_URL = mongodb+srv://salehish:salehish25@cluster0.sx4zo.mongodb.net/project-1
+MONGODB_URL = mongodb+srv://project-1:salehish25@cluster0.sx4zo.mongodb.net/project-1?retryWrites=true&w=majority&appName=Cluster0
+
+
+
+secret: process.env.SESSION_SECRET
