--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My First project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,17 @@
   "homepage": "https://github.com/salehish/cse-341-project-1#readme",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "mongodb": "^6.15.0"
-  }
+    "express-session": "^1.18.1",
+    "js": "^0.1.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.7.1"
+  },
+  "keywords": []
 }
