--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-MONGODB_URL = mongodb+srv://project-1:salehish25@cluster0.sx4zo.mongodb.net/project-1?retryWrites=true&w=majority&appName=Cluster0
-
-
-
-secret: process.env.SESSION_SECRET
+MONGODB_URI=mongodb+srv://project-1:salehish25@cluster0.sx4zo.mongodb.net/project-1?retryWrites=true&w=majority&appName=Cluster0
+SESSION_SECRET=yourSuperSecretValueHere
