--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "yaml": "^2.7.1"
   },
