--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jest": "^29.7.0",
+    "joi": "^17.13.3",
     "js": "^0.1.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "supertest": "^7.1.0",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
