week7 CSE341 final project

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGODB_URI=mongodb+srv://project-1:salehish25@cluster0.sx4zo.mongodb.net/project-1?retryWrites=true&w=majority&appName=Cluster0
+
 SESSION_SECRET=yourSuperSecretValueHere
+
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+SESSION_SECRET=some_random_secure_string
